<resources>
    <string name="app_name">submisi2Bfaa</string>

    <string name="avatar_sample">Image Avatar</string>
    <string name="github_name">Name</string>
    <string name="github_username">Username</string>
    <string name="location">Location</string>
    <string name="search">Search User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="avatars_sample">Avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="user_detail">Detail User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>